--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tweets-test-task",
-  "homepage": "https://IhorMasechko.github.io/tweets-test-task",
+  "homepage": "https://IhorMasechko.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
